--- a/rose-controler/src/main/resources/application.properties
+++ b/rose-controler/src/main/resources/application.properties
@@ -34,6 +34,9 @@ logging.config=classpath:logback.xml
 spring.thymeleaf.prefix=classpath:/views/
 spring.thymeleaf.suffix=.vm
 spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.mode=LEGACYHTML5
 
 spring.http.multipart.maxFileSize=2MB
 spring.http.multipart.maxRequestSize=2MB
